--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style1.css" />
     <link href="https://fonts.googleapis.com/css?family=Material+Icons"rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons+Round"rel="stylesheet"/>
-    <script defer src="./script.js"></script>
+    <script defer src="script.js"></script>
     <title>Vacuna</title>
   </head>
   <body>
