--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="/style.css"> -->
     <link rel="stylesheet" href="style1.css" />
     <link href="https://fonts.googleapis.com/css?family=Material+Icons"rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons+Round"rel="stylesheet"/>
@@ -71,14 +70,14 @@
             <div class="botton-date"><p>Moderna</p></div>
           </div>
         </div>
-        <div class="img-container"><img src="/assets/images/doc1.1.png" /></div>
+        <div class="img-container"><img src="assets/images/doc1.1.png" /></div>
       </section>
       <section class="W-info">
         <div class="img-container2">
-          <img src="/assets/images/astra.svg" />
-          <img src="/assets/images/sinovac.svg" />
-          <img src="/assets/images/pfizer.svg" />
-          <img src="/assets/images/moderna.svg" />
+          <img src="assets/images/astra.svg" />
+          <img src="assets/images/sinovac.svg" />
+          <img src="assets/images/pfizer.svg" />
+          <img src="assets/images/moderna.svg" />
         </div>
         <div class="Ws-info">
           <h2>Why should I vaccine?</h2>
@@ -147,10 +146,8 @@
       <section class="Info-container">
         <div class="l-prepar">
           <div class="container"><div class="triangulo"></div></div>
-
-          <!-- <div class="Rect-prepar"></div> -->
           <div class="img-container3">
-            <img src="/assets/images/perso2-2.svg" alt="" />
+            <img src="assets/images/perso2-2.svg" alt="" />
           </div>
         </div>
         <div class="r-prepar">
@@ -281,7 +278,7 @@
         </div>
         <div class="rEmergency">
           <div class="img-container4">
-            <img src="/assets/images/doc2.png" alt="" />
+            <img src="assets/images/doc2.png" alt="" />
           </div>
         </div>
       </section>
